# third-arm

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: python-ci.yml
configs/app/: default.yaml  dev.yaml  stage1_bench.yaml  stage1_desktop.yaml
configs/calibration/: placeholder.yaml
configs/slots/: stage1_objects.yaml  stage1_slots.yaml
docs/api/: asyncapi.yaml  openapi.yaml
docs/architecture/: README.md
docs/bringup/: STAGE1_BENCH_ACCEPTANCE.md  STAGE1_BENCH_BRINGUP.md  STAGE1_BENCH_CHECKLIST.md
docs/decisions/: DECISIONS_LOG.md
docs/handoff/: GitHub Publish Runbook v0.16.md  README.md  artifact_inspection_impl_note.md  bundle_wire_impl_note.md  stage1_smoke_gate_note.md
docs/status/: CURRENT_STATE.md  NEXT_STEP.md  OPEN_QUESTIONS.md
rpd/v0.10/: Robotics Budget Printables v0.10.docx  Robotics Project Log v0.10.docx  Robotics Tech Spec Architecture v0.10.docx  Third Arm Master v0.10.docx
rpd/v0.11/: Project Log and Open Questions v0.11.docx  Robotics Budget Printables v0.11.docx  Robotics Tech Spec Architecture v0.11.docx  Third Arm Master v0.11.docx
rpd/v0.12/: Robotics Budget Printables v0.12.docx  Robotics Project Log v0.12.docx  Robotics Tech Spec Architecture v0.12.docx  Third Arm Master v0.12.docx
rpd/v0.13/: Robotics Budget Printables v0.13.docx  Robotics Project Log v0.13.docx  Robotics Tech Spec Architecture v0.13.docx  Third Arm Master v0.13.docx
rpd/v0.14/: Robotics Budget Printables v0.14.docx  Robotics Project Log v0.14.docx  (+2 more)
scripts/: dev.sh  format.sh  seed_stage1_configs.py  validate_bundle.py
(+128 files in other folders)
